Fix full page stretching bug

--- a/app/javascript/assets/stylesheets/authorization.css
+++ b/app/javascript/assets/stylesheets/authorization.css
@@ -1,4 +1,6 @@
 .auth-cont {
+  display: flex;
+  flex-flow: column nowrap;
   height: 100%;
 }
 
@@ -37,6 +39,7 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
+  flex-grow: 3;
 }
 
 .auth-main-cont {
